--- a/Math Helpers Status.html
+++ b/Math Helpers Status.html
@@ -4,7 +4,7 @@
   <h1>
     <strong>
       <i class="fa fa-exclamation-triangle"></i>
-      Status: Working
+      Status: Offline
    </strong>
   </h1>
 <br>
@@ -42,7 +42,7 @@ h1 {
 </head>
 <body>
 
-<h1 class="typewriter">Working As Intented</h1>
+<h1 class="typewriter">Website Is Down Until Highschool</h1>
 
 <script>
 // get the element to animate
