--- a/Splash text.html
+++ b/Splash text.html
@@ -1,4 +1,4 @@
 <body onload="changeText()">
     <h1 id="random-h1">Original H1 Text</h1>
-    <script src=""></script>
+    <script src="https://cdn.jsdelivr.net/gh/GrayStuido/GrayStuido@main/Text%20Splash.js"></script>
   </body>
