--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Website Name</title>
+  <title>GrayStuido's Gitub</title>
   <style>
     /* Reset default styles */
     * {
