--- a/EGU-Index.html
+++ b/EGU-Index.html
@@ -96,6 +96,13 @@ background-color: #0C3755;
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fracture Dark Theme</title>
   <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #1a1a1a;
+      color: #ffffff;
+      flex-wrap: wrap;
+    }
+
     h1 {
       color: #1e90ff;
     }
@@ -229,7 +236,7 @@ background-color: #0C3755;
     <br>
     <p>Get the selected version of Fracture here:</p>
     <p>
-      <a id="downloadLink" href="https://github.com/GrayStuido/EaglercraftUltra/archive/refs/tags/3.0.0b.zip" target="_blank">Download Fracture</a>
+      <a id="downloadLink" href="https://github.com/GrayStuido/EaglercraftUltra/archive/refs/tags/3.0.0b.zip" target="_blank">Download EaglercraftUltra</a>
     </p>
   </div>
 
