--- a/EGU-Index.html
+++ b/EGU-Index.html
@@ -17,7 +17,7 @@
 }
     /* Navigation bar styles */
     nav {
-      background-color: #212C45; /* Dark blue background */
+      background-color: #1e1e1e;
       color: #fff; /* White text color */
       display: flex;
       align-items: center;
@@ -58,7 +58,8 @@
       color: #fff; /* White text color */
       text-decoration: none;
       padding: 9px;
-background-color: #0C3755;
+background-color: #2a2a2a;
+border: 2px solid #1e90ff;
     }
     
     .navbar li a:hover {
