--- a/EGU-Index.html
+++ b/EGU-Index.html
@@ -218,7 +218,7 @@ border: 2px solid #1e90ff;
     <div class="box">
       <h2>Credits:</h2>
       <ul>
-        <li>LaxDude1: Creator of EaglercraftUltra</li>
+        <li>LaxDude1: Creator of Eaglercraft</li>
         <li>Raith: Contributor to the project</li>
       </ul>
     </div>
