--- a/EGU-Index.html
+++ b/EGU-Index.html
@@ -235,7 +235,7 @@ border: 2px solid #1e90ff;
       <div class="dropdown-icon">▼</div>
     </div>
     <br>
-    <p>Get the selected version of Fracture here:</p>
+    <p>Get the selected version of EaglercraftUltra here:</p>
     <p>
       <a id="downloadLink" href="https://github.com/GrayStuido/EaglercraftUltra/archive/refs/tags/3.0.0b.zip" target="_blank">Download EaglercraftUltra</a>
     </p>
