--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ background-color: #0C3755;
     <ul class="navbar">
       <li></li>
       <li><as href="index.html">Home</as></li>
-      <li><a href="index.html">About Me</a></li>
+      <li><a href="About-Index.html">About Me</a></li>
 <p><b>Projects:</b><p>
       <li></li>
       <li><a href="EGU-Index.html">EaglercraftUltra</a></li>
