--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GrayStuido | About Me</title>
+  <title>Gragin | About Me</title>
   <style>
     
     * {
@@ -184,11 +184,13 @@ color: #1B1A1A;
 <div id="page-sub">
 <h2>About Me:</h2>
 <p>
+<br>
   <span style="color: pink;">they</span>
   <span style="color: grey;">/</span>
   <span style="color: aqua;">∞</span>
   <span style="color: grey;">/</span>
   <span style="color: salmon;">them</span>
+<br>
 <br>
 Im a Developer Of Random Things
 <br>
