--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@ Getting Into Pixel Art And Drawing In General
 <p>
 <a href="https://futurecat.itch.io/oneshot" style="color: gold;">Oneshot</a>
 <a href="https://joinbattlebit.com" style="color: grey;">BattleBit Remastered</a>
-<a href="" style="color: #BC061E;">No Mans Sky</a>
+<a href="https://www.nomanssky.com" style="color: #BC061E;">No Mans Sky</a>
 <br>
 <a href="" style="color: gold;"></a>
-<a href="" style="color: #17B8E7;">Core Keeper</a>
+<a href="https://store.steampowered.com/app/1621690/Core_Keeper/" style="color: #17B8E7;">Core Keeper</a>
 <a href="" style="color: gold;"></a>
 </p>
 
