--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@ color: #1B1A1A;
 <h2>About Me:</h2>
 <p>
 <br>
-  <span style="color: pink;">they</span>
+  <span style="color: pink;">She</span>
   <span style="color: grey;">/</span>
-  <span style="color: aqua;">∞</span>
+  <span style="color: white;">🏳️‍⚧️</span>
   <span style="color: grey;">/</span>
-  <span style="color: salmon;">them</span>
+  <span style="color: salmon;">They</span>
 <br>
 <br>
 Im a Developer Of Random Things
