--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@ Getting Into Pixel Art And Drawing In General
 <a href="https://joinbattlebit.com" style="color: grey;">BattleBit Remastered</a>
 <a href="https://www.nomanssky.com" style="color: #BC061E;">No Mans Sky</a>
 <br>
-<a href="" style="color: gold;"></a>
 <a href="https://store.steampowered.com/app/1621690/Core_Keeper/" style="color: #17B8E7;">Core Keeper</a>
-<a href="" style="color: gold;"></a>
+<a href="https://rainworldgame.com" style="color: gold;">Rain World</a>
+<a href="https://store.steampowered.com/app/2378900/The_Coffin_of_Andy_and_Leyley/" style="color: gold;">The Coffin of Andy and Leyley</a>
 </p>
 
 
