--- a/index.html
+++ b/index.html
@@ -240,8 +240,9 @@ Getting Into Pixel Art And Drawing In General
     <script>
         const reviews = [
             { content: "He a pretty funny little fella. Don't know him that well, but pretty W so far. 7/10", reviewer: "SabatonGuy1" },
-            { content: "cute :3", reviewer: "Hootis" },
+            { content: "cute :3", reviewer: "Hoootis" },
             { content: "35.227.62.178", reviewer: "da cheese man" },
+            { content: "Gay", reviewer: "crimson.official" },
         ];
 
         let currentIndex = 0;
