--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@ Getting Into Pixel Art And Drawing In General
         const reviews = [
             { content: "He a pretty funny little fella. Don't know him that well, but pretty W so far. 7/10", reviewer: "SabatonGuy1" },
             { content: "cute :3", reviewer: "Hoootis" },
+            { content: "8/10 Spoiled me too much", reviewer: "mentallyabsent" },
             { content: "35.227.62.178", reviewer: "da cheese man" },
-            { content: "Gay", reviewer: "crimson.official" },
+            { content: "this mf is 100% in the fruit basket", reviewer: "crimson.official" },
         ];
 
         let currentIndex = 0;
