--- a/index.html
+++ b/index.html
@@ -199,13 +199,17 @@ color: #1B1A1A;
   <span style="color: white;">🏳️‍⚧️</span>
   <span style="color: grey;">/</span>
   <span style="color: salmon;">They</span>
+<br>
+<span style="color: grey;">Bisexual | Poly</span>
 </div>
 <br>
 <br>
-Im a Developer Of Random Things
+<p>If you couldn't tell im trans</p>
 <br>
+<p>I like Splatoon way too much. Ive been playing the fuck out of Side Order (Im a Stamper main btw)</p>
 <br>
-Getting Into Pixel Art And Drawing In General
+<p>Im a little off the deep end :3</p>
+<p></p>
 </p>
 </div>
 <br>
@@ -219,6 +223,9 @@ Getting Into Pixel Art And Drawing In General
 <a href="https://store.steampowered.com/app/1621690/Core_Keeper/" style="color: #17B8E7;">Core Keeper</a>
 <a href="https://rainworldgame.com" style="color: #80afed;">Rain World</a>
 <a href="https://store.steampowered.com/app/2378900/The_Coffin_of_Andy_and_Leyley/" style="color: #6e6050;">The Coffin of Andy and Leyley</a>
+<br>
+<a href="https://www.pacificdrivegame.com/" style="color: #3d85c6;">Pacific Drive</a>
+<a href="https://store.steampowered.com/app/1966720/Lethal_Company/" style="color: #b20909;">Lethal Company</a>
 </p>
 </div>
 <br>
