--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ color: #1B1A1A;
   <span style="color: grey;">/</span>
   <span style="color: white;">🏳️‍⚧️</span>
   <span style="color: grey;">/</span>
-  <span style="color: salmon;">They</span>
+  <span style="color: salmon;">Her</span>
 <br>
 <span style="color: grey;">Bisexual | Poly</span>
 </div>
