--- a/index.html
+++ b/index.html
@@ -192,6 +192,11 @@
             background: repeating-linear-gradient(45deg, #271675, #000000 0px, #160429 16px, #271675 20px);
             background-size: 30px 30px;
         }
+        .GeneralTimeColor {
+
+           color: #ad42f5; 
+
+        }
 
     </style>
 </head>
@@ -203,7 +208,7 @@
     <script src="TimeZone.js"></script>
     <div id="page-wrapper">
         <div id="page-sub">
-            <h1>Hello</h1>
+            <h1>Hallo!!! :D</h1>
         </div>
         <br>
 
@@ -234,9 +239,13 @@
                 <p></p>
             </p>
             <br>
+            <br>
+            <h3>Time Zone</h3>
             <div id="time-container">
-                It is <a data-time-format="12">0:00</a> or <a data-time-format="24">00:00</a> for me
+                It is <a class="GeneralTimeColor" data-time-format="12">0:00</a> or <a class="GeneralTimeColor" data-time-format="24">00:00</a> for me
             </div>
+            <br>
+            <p>I wake up around <a class="GeneralTimeColor">8am - 12pm</a> and go to bed around <a class="GeneralTimeColor">10pm - 12am</a></p>
         </div>
         <br>
         <div id="page-sub">
@@ -255,6 +264,9 @@
                 <a href="https://store.steampowered.com/app/1966720/Lethal_Company/" style="color: #b20909;">Lethal
                     Company</a>
             </p>
+            <br>
+            <h2>Steam Friend Code:</h2>
+            <h3>1416216051</h3>
         </div>
         <br>
         <div id="page-sub">
