--- a/index.html
+++ b/index.html
@@ -1,202 +1,178 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<script src="TheFlag.js"></script>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+    <head>
+    <script src="TheFlag.js"></script>
     <title>Gragin | About Me</title>
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-        body {
-            background-color: #1a202c;
-            color: white;
-            font-family: 'Roboto', sans-serif;
-        }
+    body {
+        background-color: #1a202c;
+        color: white;
+        font-family: 'Roboto', sans-serif;
+        margin: 0;
+        padding: 0;
+        min-height: 100vh;
+        background: #141314;
+    }
 
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            background: #141314;
-        }
+    /* Navigation bar styles */
+    nav {
+        background: linear-gradient(to right, #540953, #142847);
+        color: #fff;
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        z-index: 9999;
+        font-family: 'Roboto', sans-serif;
+    }
 
-        /* Navigation bar styles */
-        nav {
-            background: linear-gradient(to right, #540953, #142847);
-            color: #fff; /* White text color */
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            z-index: 9999;
-            font-family: 'Roboto', sans-serif;
-        }
+    .logo {
+        display: flex;
+        align-items: center;
+    }
 
-        .logo {
-            display: flex;
-            align-items: center;
-        }
+    .logo img {
+        height: 40px;
+        margin-right: 10px;
+    }
 
-        .logo img {
-            height: 40px;
-            margin-right: 10px;
-        }
+    .logo h1 {
+        font-size: 20px;
+    }
 
-        .logo h1 {
-            font-size: 20px;
-        }
+    .navbar {
+        list-style: none;
+        display: flex;
+    }
 
-        .navbar {
-            list-style: none;
-            display: flex;
-        }
+    .navbar li {
+        margin-right: 10px;
+    }
 
-        .navbar li {
-            margin-right: 10px;
-        }
+    .navbar li a {
+        color: #fff;
+        text-decoration: none;
+        padding: 5px;
+    }
 
-        .navbar li a {
-            color: #fff;
-            text-decoration: none;
-            padding: 5px;
-        }
+    .navbar li as {
+        color: #fff;
+        text-decoration: none;
+        padding: 9px;
+        background-color: #730a71;
+    }
 
-        .navbar li as {
-            color: #fff;
-            text-decoration: none;
-            padding: 9px;
-            background-color: #730a71;
-        }
+    .navbar li a:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 
-        .navbar li a:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
+    #page-main {
+        width: 100%;
+        height: 100%;
+        background-color: #0d0c0d;
+        text-align: Left;
+        padding: 20px;
+        overflow: auto;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        animation: expandw 1s forwards, expandh 5s forwards;
+        background: repeating-linear-gradient(45deg, #271675, #000000 0px, #010101 16px, #1D0326 20px);
+        background-size: 30px 30px;
+        z-index: 9;
+    }
 
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
+    #page-sub {
+        border: 2px solid #181818;
+        border-radius: 10px;
+        padding: 10px;
+        display: inline-block;
+        width: 100%;
+        max-width: 435px;
+        margin-bottom: 20px;
+    }
 
-        #page-main {
-            width: 100%;
-            height: 100%;
-            background-color: #0d0c0d;
-            text-align: Left;
-            padding: 20px;
-            overflow: auto;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            animation: expandw 1s forwards, expandh 5s forwards;
-            background: repeating-linear-gradient(45deg, #271675, #000000 0px, #010101 16px, #1D0326 20px);
-            background-size: 30px 30px;
-            z-index: 9;
-        }
+    #pronouns {
+        border: 2px solid #0A0A0A;
+        border-radius: 10px;
+        display: inline-block;
+    }
 
-        #page-sub {
-            border: 2px solid #181818;
-            border-radius: 10px;
-            padding: 10px;
-            display: inline-block;
-            width: 435px;
-        }
+    #page-wrapper {
+        border: 2px solid #010101;
+        border-radius: 10px;
+        display: inline-block;
+        padding: 5px;
+        background: #010101;
+    }
 
-        #pronouns {
-            border: 2px solid #0A0A0A;
-            border-radius: 10px;
-            display: inline-block;
-        }
+    #pink {
+        color: pink;
+    }
 
-        #page-wrapper {
-            border: 2px solid #010101;
-            border-radius: 10px;
-            height: 97vh;
-            display: inline-block;
-            padding: 5px;
-            background: #010101;
-        }
+    #page-main::-webkit-scrollbar {
+        width: 0;
+    }
 
-        #pink {
-            color: pink;
-        }
+    #random-h1 {
+        color: orange;
+        font-family: Arial, sans-serif;
+        text-align: left;
+        animation: colorChange 6s linear infinite;
+    }
 
-        #page-main::-webkit-scrollbar {
-            width: 0;
-        }
+    @keyframes colorChange {
+        0%, 100% { color: rgb(255, 0, 0); }
+        25% { color: rgb(0, 255, 0); }
+        50% { color: rgb(0, 0, 255); }
+        75% { color: rgb(255, 255, 0); }
+    }
 
-        #random-h1 {
-            color: orange;
-            font-family: Arial, sans-serif;
-            text-align: left;
-            animation: colorChange 6s linear infinite;
-        }
+    #bottom-paragraph {
+        z-index: 1;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        color: #1B1A1A;
+        width: 100%;
+        background-color: transparent;
+        text-align: center;
+    }
 
-        @keyframes colorChange {
-            0%, 100% {
-                color: rgb(255, 0, 0);
-            }
+    #review-container {
+        width: 100%;
+        max-width: 300px;
+        height: 100px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        margin: 0 auto;
+        text-align: center;
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Roboto', sans-serif;
+    }
 
-            25% {
-                color: rgb(0, 255, 0);
-            }
+    #review-container.show {
+        opacity: 1;
+    }
 
-            50% {
-                color: rgb(0, 0, 255);
-            }
+    .pattern {
+        background: repeating-linear-gradient(45deg, #271675, #000000 0px, #160429 16px, #271675 20px);
+        background-size: 30px 30px;
+    }
 
-            75% {
-                color: rgb(255, 255, 0);
-            }
-        }
+    .GeneralTimeColor {
+        color: #ad42f5; 
+    }
 
-        #bottom-paragraph {
-            z-index: 1;
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            color: #1B1A1A;
-            width: 100%;
-            background-color: transperent;
-            text-align: center;
-        }
-
-        #review-container {
-            width: 300px;
-            height: 100px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            margin: 0 left;
-            text-align: center;
-            opacity: 0;
-            transition: opacity 0.5s ease-in-out;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: left;
-            font-family: 'Roboto', sans-serif;
-        }
-
-        #review-container.show {
-            opacity: 1;
-        }
-
-        .pattern {
-            background: repeating-linear-gradient(45deg, #271675, #000000 0px, #160429 16px, #271675 20px);
-            background-size: 30px 30px;
-        }
-        .GeneralTimeColor {
-
-           color: #ad42f5; 
-
-        }
     .game-icon {
         width: 20px;
         height: 20px;
@@ -204,21 +180,43 @@
         margin-right: 5px;
         object-fit: cover;
     }
+
     .game-list {
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
     }
+
     .game-item {
         display: flex;
         align-items: center;
         margin-bottom: 5px;
     }
 
-    </style>
-</head>
-<body onload="changeText()">
+    /* Compact mode styles */
+    @media (max-width: 768px) {
+        #page-sub {
+            width: 100%;
+        }
 
+        .game-list {
+            flex-direction: column;
+        }
+
+        #review-container {
+            max-width: 100%;
+        }
+
+        body {
+            font-size: 14px;
+        }
+
+        h1, h2, h3 {
+            font-size: 1.2em;
+        }
+    }
+</style></head>
+<body onload="changeText()">
 
 <div id="page-main">
     <script src="Personal-Text-Splash.js"></script>
@@ -286,7 +284,7 @@
             <a href="https://store.steampowered.com/app/1621690/Core_Keeper/" style="color: #17B8E7;">Core Keeper</a>
         </div>
         <div class="game-item">
-            <img src="https://github.com/GrayStuido/GrayStuido/blob/main/icon0.png?raw=true alt="Rain World icon" class="game-icon">
+            <img src="https://github.com/GrayStuido/GrayStuido/blob/main/icon0.png?raw=true" alt="Rain World icon" class="game-icon">
             <a href="https://rainworldgame.com" style="color: #80afed;">Rain World</a>
         </div>
         <div class="game-item">
@@ -319,7 +317,7 @@
         <br>
         <div id="page-sub">
             <a href="https://discord.com/users/724472526033649695" target="_blank">
-                <img src="https://lanyard.cnrad.dev/api/724472526033649695" alt="Discord Presence">
+                <img src="https://lanyard.cnrad.dev/api/724472526033649695" alt="Discord Presence" style="max-width: 100%; height: auto;">
             </a>
             <br>
             <br>
@@ -336,14 +334,12 @@
 
     <script>
         function updateTimeZone() {
-            const timeZone = 'America/Phoenix'; // Time zone to display
+            const timeZone = 'America/Phoenix';
             const now = new Date();
 
-            // Loop through all <a> tags with data-time-format attribute
             document.querySelectorAll('a[data-time-format]').forEach(anchor => {
                 const timeFormat = anchor.getAttribute('data-time-format');
 
-                // Determine options based on time format
                 const options = {
                     timeZone,
                     hour: 'numeric',
@@ -351,31 +347,35 @@
                     ...(timeFormat === '12' ? {hour12: true} : {hour12: false})
                 };
 
-                // Format the time based on options
                 const formattedTime = now.toLocaleString('en-US', options);
 
-                // Update the anchor's text content
                 anchor.textContent = formattedTime;
             });
         }
 
-        // Update the time zone immediately
         updateTimeZone();
 
-        // Optionally, update the time zone every minute (60000 milliseconds)
         setInterval(updateTimeZone, 60000);
+
+        // Function to check screen size and apply compact mode
+        function checkScreenSize() {
+            const compactModeBreakpoint = 768; // Breakpoint for compact mode in pixels
+            if (window.innerWidth <= compactModeBreakpoint) {
+                document.body.classList.add('compact-mode');
+            } else {
+                document.body.classList.remove('compact-mode');
+            }
+        }
+
+        // Initial check on load
+        checkScreenSize();
+
+        // Check on window resize
+        window.addEventListener('resize', checkScreenSize);
     </script>
 
 </div>
 
-<div style="display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0;">
-
-</div>
-
-</body>
-<br>
-<div>
-</div>
 <p id="bottom-paragraph">
     why you down here?
     <br>
@@ -383,4 +383,5 @@
 </p>
 <div id="page-effect">
 </div>
+</body>
 </html>
