--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <br>
                 <p>If you couldn't tell I'm trans</p>
                 <br>
-                <p>I like Splatoon way too much. I've been playing the heck out of Side Order (I'm a Stamper main btw)</p>
+                <p>I work on random things. Im never really busy</p>
                 <br>
                 <p>I'm a little off the deep end :3</p>
                 <p></p>
@@ -259,8 +259,6 @@
             <div id="time-container">
                 It is <a class="GeneralTimeColor" data-time-format="12">0:00</a> or <a class="GeneralTimeColor" data-time-format="24">00:00</a> for me
             </div>
-            <br>
-            <p>I wake up around <a class="GeneralTimeColor">8am - 12pm</a> and go to bed around <a class="GeneralTimeColor">10pm - 12am</a></p>
         </div>
         <br>
         <div id="page-sub">
@@ -377,9 +375,7 @@
 </div>
 
 <p id="bottom-paragraph">
-    why you down here?
-    <br>
-    I guess while you're here I like Diancie
+    oh, hello!
 </p>
 <div id="page-effect">
 </div>
